WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283322
[WebGPU] Fix webGpuSwift build
https://bugs.webkit.org/show_bug.cgi?id=283322
Summary
[WebGPU] Fix webGpuSwift build
Tadeu Zagallo
Reported
2024-11-18 13:43:26 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-18 13:43:39 PST
<
rdar://problem/140149757
>
Tadeu Zagallo
Comment 2
2024-11-18 13:45:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36816
EWS
Comment 3
2024-11-19 10:23:26 PST
Committed
286808@main
(3d3c00b0af03): <
https://commits.webkit.org/286808@main
> Reviewed commits have been landed. Closing PR #36816 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug