[WebGPU] Fix webGpuSwift build https://bugs.webkit.org/show_bug.cgi?id=283322 rdar://140149757

Reviewed by Mike Wyrzykowski.

Update the Swift implementation of `Buffer::copy` after `getBufferContents` was
changed to return a span.

* Source/WebGPU/WebGPU/Buffer.mm:
(WebGPU::Buffer::copy):

Canonical link: https://commits.webkit.org/286808@main